name:                acid-example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/acid-example#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          jinnzest
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable acid-example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers, time, mtl, acid-state, safecopy
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/acid-example
