name:                chat-server
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Bogdan Kolesnyk
maintainer:          jinnzest
copyright:           Copyright: (c) 2016 Bohdan Kolesnyk
category:            examples
build-type:          Simple
cabal-version:       >=1.10

executable chat-server
  main-is:             Main.hs
  build-depends:       base, network
  default-language:    Haskell2010
