name:                endless-job
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Bogdan Kolesnyk
maintainer:          jinnzest
copyright:           Copyright: (c) 2016 Bohdan Kolesnyk
category:            examples
build-type:          Simple
build-type:          Simple
cabal-version:       >=1.10

executable endless-job
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, cron >= 0.4.2 && <0.4.3
  default-language:    Haskell2010
