name:                fragments-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jinnzest/fragments-server#readme
license:             MIT
license-file:        LICENSE
author:              Bohdan Kolesnyk
maintainer:          jinnzest
copyright:           2017 Bohdan Kolesnyk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base, monad-logger, cron, http-client, http-types, happstack-server, aeson, acid-state, safecopy, containers, time, mtl, text, bytestring, iso8601-time, configurator, time, transformers, monad-control

  default-language:    Haskell2010

executable fragments-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fragments-server, monad-logger
  default-language:    Haskell2010

test-suite fragments-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fragments-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jinnzest/fragments-server
