name:                loggerTest
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Bogdan Kolesnyk
maintainer:          jinnzest
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable loggerTest
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, stylish-haskell >=0.6.1.0 && <0.6.5.0, fast-logger >=2.4.7 && <2.4.8, bytestring >=0.10.8.1 && <0.10.8.2, iso8601-time >=0.1.4 && <0.1.5, configurator >=0.3.0.0 && <0.4.0.0, time >=1.6.0.1 && <1.6.0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
