name:                loggerTest
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Bogdan Kolesnyk
maintainer:          jinnzest
copyright:           Copyright: (c) 2016 Bohdan Kolesnyk
category:            examples
build-type:          Simple
build-type:          Simple
cabal-version:       >=1.10

executable loggerTest
  main-is:             Main.hs
  build-depends:       base, monad-logger, aeson, time, monad-logger-json
  default-language:    Haskell2010
