
name:                test-configurator
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Bogdan Kolesnyk
maintainer:          jinnzest
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable test-configurator
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, configurator >=0.3.0.0 && <0.4.0.0
  -- hs-source-dirs:      
  default-language:    Haskell2010
