name:                test-templates
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jinnzest/test-templates#readme
license:             MIT
license-file:        LICENSE
author:              Bohdan Kolesnyk
maintainer:          jinnzest
copyright:           Copyright: (c) 2016 Bohdan Kolesnyk
category:            examples
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, template-haskell >= 2.11.0.0 && <2.11.0.1
  default-language:    Haskell2010

executable test-templates
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-templates, template-haskell
  default-language:    Haskell2010

test-suite test-templates-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-templates
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jinnzest/test-templates
